# airoot

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
include/audios/: love-story-short.txt
src/airoot/: __init__.py  __main__.py  base_model.py  magic.py  test_load_model.py
src/airoot/audio/: AudioToText.md  README.md  TextToAudio.md  __init__.py  audio_to_text.py  text_to_audio.py  xtts.py
src/airoot/audio/RVC/: README.md  get-python.sh  install-rvc-req.sh  requirements.txt
src/airoot/etc/: __init__.py
src/airoot/image/: ImageToText.md  __init__.py  extra.py  image_to_text.py  text_to_image.py
src/airoot/image/lib/: __init__.py  image_and_text.py
src/airoot/pdf/: __init__.py  bin.py  lib.py
src/airoot/video/: __init__.py  bin.py  lib.py
