[project]
name = "airoot"
version = "0.0.0"
authors = [
    { name="Ramya Kottapalli", email="rskottap@gmail.com" },
]
description = "Suite of generation models for text, image, audio and video."
dependencies = [
    "pytest",
    "python-magic",
    "diffusers[torch]",
    "Pillow",
    "transformers",
    "accelerate",
    "optimum",
    "assure",
    "mmry",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
source = "https://github.com/rskottap/airoot"
download = "https://pypi.org/project/airoot/#files"

[project.scripts]
textgen       = "textgen.__main__:main"
