[project]
name = "airoot"
version = "0.0.1"
authors = [
    { name="Ramya Kottapalli", email="rskottap@gmail.com" },
]
description = "Suite of generation models for text, image, audio and video."
dependencies = [
    "python-magic",
    "colorlog",
    "torchsde",
    "Pillow",
    "transformers",
    "accelerate",
    "optimum",
    "assure",
    "mmry",
    "diffusers[torch]",
    "parler-tts@git+https://github.com/huggingface/parler-tts.git",
    "huggingface_hub[cli]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "black",
    "isort",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
source = "https://github.com/rskottap/airoot"
download = "https://pypi.org/project/airoot/#files"

[project.scripts]
audiogen = "airoot.bin.audiogen:main"
audiototext = "airoot.bin.audiototext:main"

